--- a/index.html
+++ b/index.html
@@ -19,8 +19,48 @@
       }
     </style>
   </head>
-  <body>
-    <header></header>
+  <body class="font-manrope">
+    <header class="w-[90vw] max-w-7xl mx-auto">
+      <!-- Banner starts here -->
+      <div class="flex justify-between items-center pt-10 mb-20">
+        <!-- Left Section -->
+        <div class="space-y-8">
+          <h1 class="text-5xl md:text-7xl">
+            It's good<br />tea time at The<br />Tea House
+          </h1>
+          <p class="text-gray-500 w-3/4">
+            Tea and Botanical Solutions Supplier Give Optimum Satisfaction To
+            Your Taste Buds.
+          </p>
+          <button
+            class="px-5 py-3 bg-gradient-to-r from-orange-500 to-red-500 rounded text-white font-bold"
+          >
+            Explore More
+            <img class="inline" src="./images/arrow.png" alt="" />
+          </button>
+        </div>
+        <!-- Right Section -->
+        <div class="relative">
+          <img class="w-full" src="./images/banner.png" alt="" />
+          <!-- Card at bottom -->
+          <div
+            class="absolute top-38 md:top-80 md:left-32 lg:left-28 max-w-fit px-5 py-3 flex gap-2 items-center bg-white border rounded-md shadow-md shadow-slate-300"
+          >
+            <!-- Icon -->
+            <img
+              class="bg-orange-400 bg-clip-text"
+              src="./images/star.png"
+              alt=""
+            />
+            <!-- Text -->
+            <div>
+              <h2 class="font-bold text-2xl">5.00</h2>
+              <h3 class="text-gray-500">Trust Pilot Ratings</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
