Module 14 Video 3: Completed featured products section.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body class="font-manrope">
     <header class="w-[90vw] max-w-7xl mx-auto">
       <!-- Banner starts here -->
-      <div class="flex justify-between items-center pt-10 mb-20">
+      <div class="md:flex justify-between items-center pt-10 mb-20">
         <!-- Left Section -->
         <div class="space-y-8">
           <h1 class="text-5xl md:text-7xl">
@@ -61,7 +61,61 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main class="w-[90vw] max-w-7xl mx-auto">
+      <!-- Featured Products starts here -->
+      <div class="text-center space-y-6 mb-20">
+        <h1 class="font-bold text-3xl md:text-4xl">Our Featured Products</h1>
+        <p class="text-gray-500">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit,
+          minus. Consectetur ad sequi molestiae facere et? At voluptas cum
+          itaque cumque unde inventore, nam tenetur in nobis sit aut
+          perferendis?
+        </p>
+        <!-- Products card grid container starts here -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3">
+          <!-- Card 1 -->
+          <div
+            class="bg-gray-200 flex flex-col items-center gap-3 p-4 rounded-lg shadow-md"
+          >
+            <img src="./images/tea-1.png" alt="" />
+            <h2 class="font-bold text-xl">Milk Tea</h2>
+            <p class="text-gray-500 text-sm">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+          <!-- Card 2 -->
+          <div
+            class="bg-gray-200 flex flex-col items-center gap-3 p-4 rounded-lg shadow-md"
+          >
+            <img src="./images/tea-2.png" alt="" />
+            <h2 class="font-bold text-xl">Black Tea</h2>
+            <p class="text-gray-500 text-sm">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+          <!-- Card 3 -->
+          <div
+            class="bg-gray-200 flex flex-col items-center gap-3 p-4 rounded-lg shadow-md"
+          >
+            <img src="./images/tea-3.png" alt="" />
+            <h2 class="font-bold text-xl">Lemon Tea</h2>
+            <p class="text-gray-500 text-sm">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+          <!-- Card 4 -->
+          <div
+            class="bg-gray-200 flex flex-col items-center gap-3 p-4 rounded-lg shadow-md"
+          >
+            <img src="./images/tea-4.png" alt="" />
+            <h2 class="font-bold text-xl">Green Tea</h2>
+            <p class="text-gray-500 text-sm">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
