--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
       </div>
     </header>
     <main class="w-[90vw] max-w-7xl mx-auto">
-      <!-- Featured Products starts here -->
-      <div class="text-center space-y-6 mb-20">
-        <h1 class="font-bold text-3xl md:text-4xl">Our Featured Products</h1>
+      <!-- Featured Products section starts here -->
+      <section class="text-center space-y-6 mb-20">
+        <h2 class="font-bold text-3xl md:text-4xl">Our Featured Products</h2>
         <p class="text-gray-500">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit,
-          minus. Consectetur ad sequi molestiae facere et? At voluptas cum
-          itaque cumque unde inventore, nam tenetur in nobis sit aut
-          perferendis?
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
         </p>
         <!-- Products card grid container starts here -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3">
@@ -114,7 +113,48 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- Great Tea Section starts here -->
+      <section class="md:flex md:justify-between mb-20">
+        <!-- Gallery as grid container starts here -->
+        <div class="w-5/12 grid grid-cols-2 grid-rows-3 gap-4">
+          <!-- Box 1 -->
+          <div class="bg-gradient-to-r from-red-100 to-red-50 rounded-lg"></div>
+          <!-- Box 2 -->
+          <div class="bg-orange-50 row-span-2 rounded-lg">
+            <img class="mx-auto" src="./images/fresh-1.png" alt="" />
+          </div>
+          <!-- Box 3 -->
+          <div class="bg-stone-100 row-span-2 rounded-lg">
+            <img class="mx-auto" src="./images/fresh-2.png" alt="" />
+          </div>
+          <!-- Box 4 -->
+          <div
+            class="bg-gradient-to-r from-stone-200 to-stone-100 rounded-lg"
+          ></div>
+        </div>
+        <!-- Text starts here -->
+        <div class="space-y-5 w-5/12">
+          <h2 class="font-extrabold text-5xl">Great Tea, Freshly Presented</h2>
+          <p class="font-medium text-gray-500">
+            The meaning of gong cha in Chinese is to provide the best tea to the
+            emperor from all possessions . It represents the highest quality and
+            self expectation. Establishing in 2006, Gong cha had been deeply
+            appreciated by its custoers because of good words of mouth and
+            unique customized service orginated from Taiwan.
+          </p>
+          <h3 class="font-extrabold text-xl">Unique Taste</h3>
+          <p class="font-medium text-gray-500">
+            A Unique and different style from other teapots gives a luxurious
+            and minimalist impression.
+          </p>
+          <h3 class="font-extrabold text-xl">Premium Quality</h3>
+          <p class="font-medium text-gray-500">
+            Premium Quality that makes tea more elegant and more durable when
+            you use it.
+          </p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
