Module 14 Video 5: Added left sub-section of Clients section.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
         </div>
       </section>
-      <!-- Great Tea Section starts here -->
+      <!-- Great Tea section starts here -->
       <section class="md:flex md:justify-between mb-20">
         <!-- Gallery as grid container starts here -->
         <div class="w-5/12 grid grid-cols-2 grid-rows-3 gap-4">
@@ -153,6 +153,33 @@
             Premium Quality that makes tea more elegant and more durable when
             you use it.
           </p>
+        </div>
+      </section>
+      <!-- Clients section starts here -->
+      <section
+        class="bg-gradient-to-r from-orange-400 to-red-400 py-[85px] px-[70px] mb-20 grid grid-cols-1 md:grid-cols-2 rounded-xl"
+      >
+        <!-- Left sub-section starts here -->
+        <div
+          class="space-y-5 bg-no-repeat bg-contain h-full"
+          style="background-image: url(./images/bg_cup.png)"
+        >
+          <h2 class="font-extrabold text-5xl text-[#F4F4F4]">
+            Meet Our Super Clients
+          </h2>
+          <p class="font-medium text-[#F4F4F4]">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+          <button class="bg-white px-[28px] py-[14px] text">
+            <p
+              class="bg-gradient-to-r from-orange-400 to-red-600 bg-clip-text text-transparent font-bold text-xl"
+            >
+              Show All
+            </p>
+          </button>
         </div>
       </section>
     </main>
