Module 14 Video 6: Completed right sub-section of Clients section.

--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
         </div>
       </section>
       <!-- Great Tea section starts here -->
-      <section class="md:flex md:justify-between mb-20">
+      <section
+        class="flex flex-col justify-center md:flex-row md:justify-between mb-20"
+      >
         <!-- Gallery as grid container starts here -->
-        <div class="w-5/12 grid grid-cols-2 grid-rows-3 gap-4">
+        <div class="w-full md:w-5/12 grid grid-cols-2 grid-rows-3 gap-4">
           <!-- Box 1 -->
           <div class="bg-gradient-to-r from-red-100 to-red-50 rounded-lg"></div>
           <!-- Box 2 -->
@@ -134,7 +136,7 @@
           ></div>
         </div>
         <!-- Text starts here -->
-        <div class="space-y-5 w-5/12">
+        <div class="space-y-5 w-full md:w-5/12">
           <h2 class="font-extrabold text-5xl">Great Tea, Freshly Presented</h2>
           <p class="font-medium text-gray-500">
             The meaning of gong cha in Chinese is to provide the best tea to the
@@ -157,11 +159,11 @@
       </section>
       <!-- Clients section starts here -->
       <section
-        class="bg-gradient-to-r from-orange-400 to-red-400 py-[85px] px-[70px] mb-20 grid grid-cols-1 md:grid-cols-2 rounded-xl"
+        class="bg-gradient-to-r from-orange-400 to-red-400 py-[85px] px-[70px] mb-20 grid grid-cols-1 md:grid-cols-2 gap-28 rounded-xl"
       >
         <!-- Left sub-section starts here -->
         <div
-          class="space-y-5 bg-no-repeat bg-contain h-full"
+          class="space-y-5 bg-no-repeat bg-contain flex flex-col justify-center items-start"
           style="background-image: url(./images/bg_cup.png)"
         >
           <h2 class="font-extrabold text-5xl text-[#F4F4F4]">
@@ -180,6 +182,84 @@
               Show All
             </p>
           </button>
+        </div>
+        <!-- Right sub-section starts here -->
+        <div class="space-y-5 relative">
+          <!-- Card 1 -->
+          <div
+            class="bg-white w-full p-[40px] rounded-lg space-y-5 relative opacity-30"
+          >
+            <!-- Client Image -->
+            <img
+              class="absolute -top-5 -left-5 border-4 border-solid border-white rounded-full"
+              src="./images/client.png"
+              alt=""
+            />
+            <!-- Client Review -->
+            <p class="text-[#777777]">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <!-- Client Details -->
+            <div>
+              <!-- Client Name -->
+              <h3 class="text-[#1C1C1C] font-bold">Ilham Yuda</h3>
+              <!-- Client Title -->
+              <p class="text-[#5D5A6F] font-medium">Businessman</p>
+              <!-- Dots in circular structure -->
+              <img class="ml-auto" src="./images/circles.png" alt="" />
+            </div>
+          </div>
+          <!-- Card 2 -->
+          <div
+            class="bg-white w-full p-[40px] rounded-lg space-y-5 relative opacity-30"
+          >
+            <!-- Client Image -->
+            <img
+              class="absolute -top-5 -left-5 border-4 border-solid border-white rounded-full"
+              src="./images/client.png"
+              alt=""
+            />
+            <!-- Client Review -->
+            <p class="text-[#777777]">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <!-- Client Details -->
+            <div>
+              <!-- Client Name -->
+              <h3 class="text-[#1C1C1C] font-bold">Ilham Yuda</h3>
+              <!-- Client Title -->
+              <p class="text-[#5D5A6F] font-medium">Businessman</p>
+              <!-- Dots in circular structure -->
+              <img class="ml-auto" src="./images/circles.png" alt="" />
+            </div>
+          </div>
+          <!-- Card 3 -->
+          <div
+            class="bg-white w-full p-[40px] rounded-lg space-y-5 absolute top-24 -left-20"
+          >
+            <!-- Client Image -->
+            <img
+              class="absolute -top-5 -left-5 border-4 border-solid border-white rounded-full"
+              src="./images/client.png"
+              alt=""
+            />
+            <!-- Client Review -->
+            <p class="text-[#777777]">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <!-- Client Details -->
+            <div>
+              <!-- Client Name -->
+              <h3 class="text-[#1C1C1C] font-bold">Ilham Yuda</h3>
+              <!-- Client Title -->
+              <p class="text-[#5D5A6F] font-medium">Businessman</p>
+              <!-- Dots in circular structure -->
+              <img class="ml-auto" src="./images/circles.png" alt="" />
+            </div>
+          </div>
         </div>
       </section>
     </main>
