Module 14 Video 7 and 8: Completed footer section.

--- a/index.html
+++ b/index.html
@@ -263,6 +263,77 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-red-100">
+      <!-- Footer Content container -->
+      <div class="w-[90vw] max-w-7xl mx-auto py-[130px]">
+        <!-- Logo, text and button row -->
+        <div class="flex justify-between mb-[54px]">
+          <img src="./images/cup.png" alt="" />
+          <div class="flex gap-5 items-center">
+            <p>Ready to get started?</p>
+            <button
+              class="px-[25px] py-[15px] text-white rounded-lg bg-gradient-to-r from-orange-500 to-red-500"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+        <!-- Grid 4 Columns -->
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-7 mb-[54px]"
+        >
+          <!-- Column 1 -->
+          <div class="flex flex-col gap-5">
+            <h1 class="font-semibold text-xl text-[#1C1C1C]">Quick Links</h1>
+            <a class="text-[#494949]" href="">Home</a>
+            <a class="text-[#494949]" href="">About Us</a>
+            <a class="text-[#494949]" href="">Insurance</a>
+            <a class="text-[#494949]" href="">Privacy Policy</a>
+          </div>
+          <!-- Column 2 -->
+          <div class="flex flex-col gap-5">
+            <h1 class="font-semibold text-xl text-[#1C1C1C]">Our Service</h1>
+            <a class="text-[#494949]" href="">Life Insurance</a>
+            <a class="text-[#494949]" href="">Car Insurance</a>
+            <a class="text-[#494949]" href="">Health Insurance</a>
+            <a class="text-[#494949]" href="">House Insurance</a>
+          </div>
+          <!-- Column 3 -->
+          <div class="flex flex-col gap-5">
+            <h1 class="font-semibold text-xl text-[#1C1C1C]">Help</h1>
+            <a class="text-[#494949]" href="">FAQs</a>
+            <a class="text-[#494949]" href="">Contact Us</a>
+          </div>
+          <!-- Column 4 -->
+          <div class="space-y-10">
+            <h2 class="font-semibold text-2xl text-[#1C1C1C]">
+              Subscribe to our newsletter
+            </h2>
+            <!-- Input and arrow container -->
+            <div class="flex">
+              <input
+                class="outline-none bg-inherit pb-5 border-b-2 border-solid border-black"
+                type="text"
+                placeholder="Email address"
+              />
+              <!-- Arrow bg containing arrow -->
+              <div class="bg-orange-500 rounded-full cursor-pointer">
+                <img src="./images/arrow-forward.png" alt="" />
+              </div>
+            </div>
+            <!-- Social media container -->
+            <div class="flex gap-5">
+              <img src="./images/facebook.png" alt="" />
+              <img src="./images/twitter.png" alt="" />
+              <img src="./images/instagram.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <!-- Copyright -->
+        <p class="text-center">
+          &copy; 2027 UIDesign.to - All rights reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
